--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Обязательные мета-теги -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React</title>
+
+    <!-- Ключевые SEO-теги -->
+    <title>Массажный салон Magic Massage | Массаж в Орле</title>
+    <meta name="description" content="Релакс массаж в орле: классический, силовой, массаж ног, массаш шейно-воротниковой зоны.">
+    <meta name="keywords" content="массаж, орел, в орле, массажный салон, релакс">
+
+    <!-- OpenGraph для соцсетей -->
+    <meta property="og:title" content="Массажный салон Magic Massage | Массаж в Орле">
+    <meta property="og:description" content="Релакс массаж в орле: классический, силовой, массаж ног, массаш шейно-воротниковой зоны.">
+    <meta property="og:image" content="/logo.svg">
+    <meta property="og:url" content="https://magic-massage.vercel.app">
+    <meta property="og:type" content="website">
+
     <!-- Яндекс -->
     <meta name="yandex-verification" content="88573aa547648246" />
+
+    <!-- Стили -->
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link href="/src/styles.css" rel="stylesheet">
+    
+    <!-- Каноническая ссылка -->
+    <link rel="canonical" href="https://magic-massage.vercel.app">
   </head>
 
   <body>
