--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <!-- Стили -->
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link href="/src/styles.css" rel="stylesheet">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
+    <link rel="shortcut icon" href="/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
+    <link rel="manifest" href="/favicons/site.webmanifest" />
     
     <!-- Каноническая ссылка -->
     <link rel="canonical" href="https://magic-massage.vercel.app">
